# rust-backend-boilerplate

./: .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml  env.example
migrations/2025-02-25-045212_create_todo/: up.sql
src/: main.rs  state.rs
src/application/todo/entity/: todo.rs
src/application/todo/repository/: todo_repository.rs
src/application/todo/usecase/: create_todo_usecase.rs  delete_todo_usecase.rs  get_todo_usecase.rs  get_todos_usecase.rs  mod.rs  update_todo_usecase.rs
src/bootstrap/: config.rs  dependency.rs  mod.rs
src/common/: app_error.rs
src/infrastructure/: mod.rs
src/infrastructure/data/database/: database_todo_repository.rs  mod.rs  schema.rs
src/infrastructure/data/database/model/: todo_model.rs
src/infrastructure/presenter/http/: mod.rs  response.rs
src/infrastructure/presenter/http/entity/: todo_dto.rs
src/infrastructure/presenter/http/middleware/: auth.rs
src/infrastructure/presenter/http/routes/: health.rs  mod.rs  todo.rs
src/test/usecase/: create_todo_usecase_test.rs  delete_todo_usecase_test.rs  get_todo_usecase_test.rs  get_todos_usecase_test.rs  mock_todo_repository.rs  mod.rs  update_todo_usecase_test.rs
