[package]
name = "boilerplate"
version = "0.1.0"
edition = "2024"

[profile.dev]
incremental = false

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
axum = { version = "0.8.1", features = ["macros"] }
serde = { version = "1.0.218", features = ["derive"] }
utoipa = {version = "5.3.1", features = ["axum_extras"]}
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
utoipa-redoc = {version = "6.0.0", features = ["axum"]}
utoipa-rapidoc = {version = "6.0.0", features = ["axum"]}
utoipa-scalar = {version = "0.3.0", features = ["axum"]}
hyper = {version = "1.6.0", features = ["full"]}
dotenv = "0.15.0"
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "uuid", "serde_json"] }
async-trait = "0.1.86"
tower = "0.5.1"
headers = "0.4.0"
reqwest = { version = "0.12.12", features = ["json"] }
jsonwebtoken = "9.3.1"
anyhow = "1.0.96"
thiserror = "2.0.11"